<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dawid.projectpum.DaySummary">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_margin"
        android:fontFamily="@font/cabin_sketch"
        android:text="@string/summaryTitle"
        android:textSize="@dimen/bigTitle"/>

    <TextView
        android:id="@+id/rating_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/recyclerView"
        android:layout_marginTop="97dp"
        android:layout_toStartOf="@+id/textView2"
        android:text="@string/rating"
        android:textSize="@dimen/title" />

    <android.support.v7.widget.RecyclerView
        android:orientation="vertical"
        android:id="@+id/recyclerView"
        android:layout_width="@dimen/standard_icon"
        android:layout_height="@dimen/summary_recycleView_h"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/exit_button"
        android:layout_width="@dimen/long_button"
        android:layout_height="@dimen/standard_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/footer_margin"
        android:drawableRight="@drawable/ic_arrow_forward"
        android:text="@string/exitButton" />

</RelativeLayout>
