<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dawid.projectpum.CommonBandSync">

    <TextView
        android:id="@+id/welcome_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/commonWelcomeTitle"
        android:textSize="@dimen/title" />

    <Button
        android:id="@+id/sync_button"
        android:layout_width="@dimen/sync_button_w"
        android:layout_height="@dimen/sync_button_h"
        android:layout_below="@+id/welcome_title_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/syncButton"
        android:enabled="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/sync_button"
        android:layout_below="@+id/sync_button"
        android:layout_marginStart="12dp"
        android:text="@string/disabled"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/sync_button"
        android:layout_below="@+id/sync_button"
        android:text="@string/ok"
        android:textSize="@dimen/commonText" />

    <LinearLayout
        android:id="@+id/dataView_LinearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginVertical="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/fallAsleep"
                android:textSize="@dimen/commonText" />

            <!--<TextView-->
            <!--android:id="@+id/start_time_text"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:text="00:00" />-->
            <!--<EditText-->
            <!--android:editable="false"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="30dp" />-->
            <Button
                android:id="@+id/pickStartTime"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/pickTime"
                android:textAllCaps="false"
                android:textSize="@dimen/commonText" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/wakeUp"
                android:textSize="@dimen/commonText" />
            <!--<EditText-->
            <!--android:editable="false"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="30dp" />-->
            <!--<TextView-->
            <!--android:id="@+id/end_time_text"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:text="00:00"></TextView>-->
            <Button
                android:id="@+id/pickEndTime"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/pickTime"
                android:textAllCaps="false"
                android:textSize="@dimen/commonText" />

        </RelativeLayout>

        <!--<RelativeLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content">-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/deepSleep"-->
        <!--android:textSize="@dimen/commonText" />-->
        <!--&lt;!&ndash;<EditText&ndash;&gt;-->
        <!--&lt;!&ndash;android:editable="false"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_alignParentEnd="true"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="50dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="30dp" />&ndash;&gt;-->
        <!--</RelativeLayout>-->

        <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/repairButton"-->
        <!--android:textSize="@dimen/commonText" />-->
    </LinearLayout>

    <Button
        android:layout_width="@dimen/standard_icon"
        android:layout_height="@dimen/standard_icon"
        android:background="@drawable/ic_settings_black_24dp"
        android:gravity="center|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="20dp"/>
    <Button
        android:id="@+id/next_button"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="@drawable/ic_arrow_forward"
        android:gravity="center|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        />

</RelativeLayout>
