<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dawid.projectpum.JobLifeAbout">

    <TextView
        android:id="@+id/jobAbout_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/jobAboutTitle"
        style="@style/title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/jobAbout_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/jobAbout_recycleView"
            android:layout_width="200sp"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workingHours" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/number_picker"
                android:layout_width="100dp"
                android:layout_height="50dp"
                app:np_dividerColor="@color/primaryColor"
                app:np_max="14"
                app:np_min="0"
                app:np_orientation="horizontal"
                app:np_selectedTextColor="@color/primaryColor"
                app:np_textColor="@color/primaryColor"
                app:np_value="0" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/lifeAbout_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/lifeAboutTitle"
        style="@style/title" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lifeAbout_recycleView"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/lifeAbout_textView"
        android:layout_below="@+id/lifeAbout_textView"
        android:layout_marginTop="14dp">

    </android.support.v7.widget.RecyclerView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_arrow_forward"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp" />

</RelativeLayout>
