<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dawid.projectpum.DayInfo">

    <TextView
        android:id="@+id/aboutDay_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_margin"
        android:text="@string/aboutDayTitle"
        style="@style/title" />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_below="@+id/aboutDay_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:id="@+id/relativeLayout">
<RadioGroup
    android:id="@+id/radioGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/linearLayout3">
        <Button
            android:id="@+id/mood_button"
            android:background="@drawable/ic_mood_black_24dp"
            android:layout_width="@dimen/standard_icon"
            android:layout_height="@dimen/standard_icon"
            android:gravity="center"/>
        <RadioButton
            android:id="@+id/mood_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/neutral_button"
            android:layout_width="@dimen/standard_icon"
            android:layout_height="@dimen/standard_icon"
            android:background="@drawable/ic_sentiment_neutral_black_24dp"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/neutral_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout3"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:id="@+id/mood_bad_button"
            android:layout_width="@dimen/standard_icon"
            android:layout_height="@dimen/standard_icon"
            android:background="@drawable/ic_mood_bad_black_24dp"
            android:gravity="center" />
        <RadioButton
            android:id="@+id/mood_bad_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RadioGroup>

</RelativeLayout>

    <TextView
        android:id="@+id/energy_title"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/aboutDay_title"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginBottom="@dimen/layout_margin"
        android:text="@string/energyTitle" />

<RelativeLayout
    android:id="@+id/relativeLayout2"
    android:layout_below="@id/energy_title"
    android:layout_width="300dp"
    android:layout_height="90dp"
    android:layout_centerHorizontal="true"
    >
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/min_energy_btn"
                android:layout_width="@dimen/big_icon"
                android:layout_height="@dimen/big_icon"
                android:layout_alignParentStart="true"
                android:background="@color/secondaryLightColor"
                android:text="@string/lowEnergy" />
            <RadioButton
                android:id="@+id/min_energy_radiobtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:id="@+id/medium_energy_btn"
                android:text="@string/standardEnergy"
                android:layout_width="@dimen/big_icon"
                android:layout_height="@dimen/big_icon"
                android:background="@color/secondaryColor"
                android:layout_centerHorizontal="true" />
            <RadioButton
                android:id="@+id/medium_energy_radiobtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:id="@+id/max_energy_btn"
                android:text="@string/bigEnergy"
                android:layout_width="@dimen/big_icon"
                android:layout_height="@dimen/big_icon"
                android:textColor="@color/secondaryTextColor"
                android:background="@color/secondaryDarkColor"
                android:layout_alignParentEnd="true" />
            <RadioButton
                android:id="@+id/max_energy_radiobtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RadioGroup>

</RelativeLayout>


    <RelativeLayout
        android:id="@+id/right_checkbox_layout"
        android:layout_width="@dimen/rightCheckBox_w"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/energy_title"
        android:layout_below="@+id/relativeLayout2"
        android:layout_marginTop="@dimen/layout_margin">

        <TextView
            android:id="@+id/textView4"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snoreText" />

        <CheckBox
            android:id="@+id/snore_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:textSize="@dimen/title" />
    </RelativeLayout>

    <Button
        android:id="@+id/snoreInfo"
        android:layout_width="@dimen/small_icon"
        android:layout_height="@dimen/small_icon"
        android:layout_alignStart="@+id/right_checkbox_layout"
        android:layout_below="@+id/right_checkbox_layout"
        android:background="@drawable/ic_info_outline_black_24dp" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_arrow_forward"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp" />


</RelativeLayout>
